<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Muzic</string>
    <string name="home">Home</string>
    <string name="songs">Songs</string>
    <string name="setting">Settings</string>
    <string name="search_album_song">Search album song</string>
    <string name="hot_recommended">Hot Recommended</string>
    <string name="author">Author</string>
    <string name="playlist">Playlist</string>
    <string name="recently_played">Recently Played</string>
    <string name="txt_long_example" tools:ignore="Typos">This is a very very very very very very very very long name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_playlists">My Playlists</string>
    <string name="view_all">View All</string>
    <string name="my_top_tracks">My Top Tracks</string>
    <string name="latest_added">Latest Added</string>
    <string name="history">History</string>
    <string name="favourites">Favourites</string>
    <string name="play">Play</string>
    <string name="play_next">Play next</string>
    <string name="add_to_playing_queue">Add to playing queue</string>
    <string name="add_to_playlist">Add to playlist ...</string>
    <string name="rename">Rename</string>
    <string name="tag_editor">Tag editor</string>
    <string name="go_to_artist">Go to artist</string>
    <string name="delete_from_device">Delete from device</string>
    <string name="share">Share</string>
    <string name="social_share">Social Share</string>
    <string name="playing_queue">Playing Queue</string>
    <string name="lyrics">Lyrics</string>
    <string name="volume">Volume</string>
    <string name="details">Details</string>
    <string name="sleep_timer">Sleep timer</string>
    <string name="equaliser">Equaliser</string>
    <string name="ringtone_cutter">Ringtone_cutter</string>
    <string name="player_theme">Player theme</string>
    <string name="driver_mode">Driver mode</string>
    <string name="display">Display</string>
    <string name="audio">Audio</string>
    <string name="headset">Headset</string>
    <string name="lockscreen">Lockscreen</string>
    <string name="advanced">Advanced</string>
    <string name="other">Other</string>
    <string name="followers">Followers</string>
    <string name="num_default">3,689</string>
    <string name="follow">Follow</string>
    <string name="listeners">Listeners</string>
    <string name="top_albums">Top Albums</string>
    <string name="time_default">4:12</string>
    <string name="top_songs">Top Songs</string>
    <string name="themes">Themes</string>
    <string name="ringtone">Ringtone Cutter</string>
    <string name="equliser">Equliser</string>
    <string name="drive_mode">Drive Mode</string>
    <string name="hidden_folders">Hidden Folders</string>
    <string name="scan_media">Scan Media</string>
    <string name="albums">Albums</string>
    <string name="artists">Artists</string>
    <string name="operator_per">/</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="app_description">appwidget</string>
    <string name="cancel">Cancel</string>
    <string name="out">Close</string>
    <string name="close_app">Do you want to close app ?</string>
</resources>