<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="20dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/img_card"
        android:layout_width="232dp"
        android:layout_height="128dp"
        android:scaleType="centerCrop"
        app:strokeColor="@color/black_200"
        app:strokeWidth="0.5dp"
        app:shapeAppearanceOverlay="@style/CornerImage_8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/app_name" />


    <TextView
        android:id="@+id/txt_name_card"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/songs"
        android:textSize="13sp"
        android:textStyle="bold"
        android:fontFamily="@font/circular_std_medium"
        app:layout_constraintStart_toStartOf="@+id/img_card"
        app:layout_constraintTop_toBottomOf="@+id/img_card" />

    <TextView
        android:id="@+id/txt_author_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textColor="@color/text_hint_color"
        android:fontFamily="@font/circular_std_medium"
        android:text="@string/author"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@+id/img_card"
        app:layout_constraintTop_toBottomOf="@+id/txt_name_card"
        tools:ignore="SmallSp" />
</androidx.constraintlayout.widget.ConstraintLayout>