<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".activity.screen.artistdetail.ArtistDetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/img_cover"
            android:layout_width="match_parent"
            android:layout_height="172dp"
            android:layout_margin="@dimen/default_margin_20"
            android:alpha="0.7"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/CornerImage_4"
            app:strokeWidth="0dp"
            app:strokeColor="@color/view_line_color"
            tools:ignore="ContentDescription"
            tools:src="@drawable/img_bg_recommend_default" />


        <TextView
            android:id="@+id/txt_album_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/circular_std_medium"
            android:text="@string/songs"
            android:textColor="@color/color_text_50"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/txt_artist_type"
            app:layout_constraintEnd_toEndOf="@+id/img_cover"
            app:layout_constraintStart_toStartOf="@+id/img_cover" />

        <TextView
            android:id="@+id/txt_artist_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/circular_std_medium"
            android:text="@string/songs"
            android:textColor="@color/color_text_50"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="@+id/img_cover"
            app:layout_constraintEnd_toEndOf="@+id/img_cover"
            app:layout_constraintStart_toStartOf="@+id/img_cover"
            app:layout_constraintTop_toTopOf="@+id/img_cover" />

        <TextView
            android:id="@+id/txt_artist_follow_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/circular_std_medium"
            android:text="@string/num_default"
            android:textColor="@color/color_text_50"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/txt_artist_follow"
            app:layout_constraintStart_toStartOf="@+id/txt_artist_follow" />

        <TextView
            android:id="@+id/txt_artist_follow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin_20"
            android:fontFamily="@font/circular_std_medium_book"
            android:text="@string/followers"
            android:textColor="@color/color_text_50"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="@+id/img_cover"
            app:layout_constraintStart_toStartOf="@+id/img_cover" />


        <TextView
            android:id="@+id/txt_artist_listener_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/circular_std_medium"
            android:text="@string/num_default"
            android:textColor="@color/color_text_50"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/txt_artist_listener"
            app:layout_constraintStart_toStartOf="@+id/txt_artist_listener" />

        <TextView
            android:id="@+id/txt_artist_listener"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin_20"
            android:fontFamily="@font/circular_std_medium_book"
            android:text="@string/listeners"
            android:textColor="@color/color_text_50"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="@+id/img_cover"
            app:layout_constraintEnd_toStartOf="@+id/btn_play_albums"
            app:layout_constraintStart_toEndOf="@+id/txt_artist_follow" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_play_albums"
            android:layout_width="74dp"
            android:layout_height="24dp"
            android:layout_margin="@dimen/default_margin_20"
            android:background="@drawable/bg_button_gradient"
            android:fontFamily="@font/circular_std_medium"
            android:text="@string/follow"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="8sp"
            app:layout_constraintBottom_toBottomOf="@+id/img_cover"
            app:layout_constraintEnd_toEndOf="@+id/img_cover"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/top_albums"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin_20"
            android:text="@string/top_albums"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@+id/img_cover"
            app:layout_constraintTop_toBottomOf="@+id/img_cover" />

        <TextView
            android:id="@+id/txt_view_all_albums"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_all"
            android:textColor="@color/light_peach"
            android:textSize="11sp"
            app:layout_constraintBottom_toBottomOf="@+id/top_albums"
            app:layout_constraintEnd_toEndOf="@+id/img_cover"
            app:layout_constraintTop_toTopOf="@+id/top_albums"
            tools:ignore="SmallSp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/artist_album_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin_20"
            android:nestedScrollingEnabled="true"
            app:layout_constraintTop_toBottomOf="@+id/top_albums" />


        <TextView
            android:id="@+id/top_songs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin_20"
            android:text="@string/top_songs"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@+id/img_cover"
            app:layout_constraintTop_toBottomOf="@+id/artist_album_container" />

        <TextView
            android:id="@+id/txt_view_all_songs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_all"
            android:textColor="@color/light_peach"
            android:textSize="11sp"
            app:layout_constraintBottom_toBottomOf="@+id/top_songs"
            app:layout_constraintEnd_toEndOf="@+id/img_cover"
            app:layout_constraintTop_toTopOf="@+id/top_songs"
            tools:ignore="SmallSp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/artist_songs_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin_20"
            android:nestedScrollingEnabled="false"
            app:layout_constraintTop_toBottomOf="@+id/top_songs" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>
