<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/dark_background_color">

    <ImageView
        android:id="@+id/app_icon"
        android:layout_width="68dp"
        android:layout_height="100dp"
        android:scaleType="centerInside"
        android:layout_marginTop="60dp"
        android:src="@drawable/app_logo_null_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/song_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/circular_std_medium_book"
        android:text="@string/num_default"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="@+id/textView7"
        app:layout_constraintStart_toStartOf="@+id/textView7" />

    <TextView
        android:id="@+id/album_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/circular_std_medium_book"
        android:text="@string/num_default"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/textView9"
        app:layout_constraintEnd_toEndOf="@+id/textView9"
        app:layout_constraintStart_toStartOf="@+id/textView9" />

    <TextView
        android:id="@+id/artist_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/circular_std_medium_book"
        android:text="@string/num_default"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="@+id/textView8"
        app:layout_constraintStart_toStartOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/circular_std_medium_book"
        android:text="@string/songs"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView9"
        app:layout_constraintEnd_toStartOf="@+id/textView9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="40dp"
        android:fontFamily="@font/circular_std_medium_book"
        android:text="@string/albums"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/app_icon"
        app:layout_constraintStart_toStartOf="@+id/app_icon"
        app:layout_constraintTop_toBottomOf="@+id/app_icon" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/circular_std_medium_book"
        android:text="@string/artists"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toTopOf="@+id/textView9" />

</androidx.constraintlayout.widget.ConstraintLayout>