<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:background="@drawable/background_dialog"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txt_continue"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginVertical="16dp"
            android:fontFamily="@font/circular_std_medium_book"
            android:gravity="center"
            android:layout_marginHorizontal="20dp"
            android:text="@string/close_app"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="8dp"
            android:background="@color/view_line_color"
            app:layout_constraintBottom_toBottomOf="@+id/txt_continue" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintTop_toBottomOf="@+id/txt_continue">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_close"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:fontFamily="@font/circular_std_medium"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/out"
                android:textAllCaps="false"
                android:textColor="@color/white"
                tools:ignore="UnusedAttribute" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:fontFamily="@font/circular_std_medium"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/white"
                tools:ignore="UnusedAttribute" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/icon_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:paddingTop="32dp"
        android:scaleType="centerInside"
        android:src="@drawable/ic_app_null_text"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout2"/>
</androidx.constraintlayout.widget.ConstraintLayout>